cmake_minimum_required(VERSION 4.0)
project(algorithm_vault)

set(CMAKE_CXX_STANDARD 14)

add_executable(algorithm_vault
        big-stone/week0/notion/permutation_combination.cpp
        big-stone/week0/notion/recurrance.cpp
        big-stone/week1/problem/1-A.cpp
        big-stone/week1/problem/1-B.cpp
        big-stone/week1/problem/1-C.cpp
        big-stone/week1/problem/1-D.cpp
        big-stone/week1/problem/1-E.cpp
        big-stone/week1/problem/1-F.cpp
        big-stone/week1/problem/1-G.cpp
        big-stone/week1/problem/1-H.cpp
        big-stone/week1/problem/1-I.cpp
        big-stone/week1/problem/1-J.cpp
        big-stone/week1/problem/1-K.cpp
        big-stone/week1/problem/1-L.cpp
        big-stone/week1/problem/1-M.cpp
        big-stone/week1/problem/1-N.cpp
        big-stone/week1/problem/1-O.cpp
        big-stone/week1/notion_prefix1.cpp
        big-stone/week2/problem/2-A.cpp
        big-stone/week2/problem/2-B.cpp
        big-stone/week2/problem/2-C.cpp
        big-stone/week2/problem/2-D.cpp
        big-stone/week2/problem/2-E.cpp
        big-stone/week2/problem/2-F.cpp
        big-stone/week2/problem/2-G.cpp
        big-stone/week2/problem/2-H.cpp
        big-stone/week2/problem/2-I.cpp
        big-stone/week2/problem/2-J.cpp
        big-stone/week2/problem/2-K.cpp
        big-stone/week2/problem/2-L.cpp
        big-stone/week2/problem/2-M.cpp
        big-stone/week2/problem/2-N.cpp
        big-stone/week2/problem/2-O.cpp
        big-stone/week2/problem/2-P.cpp
        big-stone/week2/problem/2-Q.cpp
        big-stone/week2/problem/2-R.cpp
        big-stone/week2/problem/2-S.cpp
        big-stone/week2/problem/2-T.cpp
        big-stone/week3/problem/3-A.cpp
        big-stone/week3/problem/3-B.cpp
        big-stone/week3/problem/3-C-DFS.cpp
        big-stone/week3/problem/3-C.cpp
        big-stone/week3/problem/3-D-teacher.cpp
        big-stone/week3/problem/3-D.cpp
        big-stone/week3/problem/3-E.cpp
        big-stone/week3/problem/3-F.cpp
        big-stone/week3/problem/3-G.cpp
        big-stone/week3/problem/3-H.cpp
        big-stone/week3/problem/3-I.cpp
        big-stone/week3/problem/3-J.cpp
        big-stone/week3/problem/3-K.cpp
        big-stone/week3/problem/3-L.cpp
        big-stone/week3/problem/3-M.cpp
        big-stone/week3/problem/3-N.cpp
        big-stone/week3/problem/3-O.cpp
        big-stone/week3/problem/3-P.cpp
        big-stone/week3/problem/3-Q.cpp
        big-stone/week4/notion/bin_operations.cpp
        big-stone/week4/problem/4-A.cpp
        big-stone/week4/problem/4-B.cpp
        big-stone/week4/problem/4-C.cpp
        big-stone/week4/problem/4-D.cpp
        big-stone/week4/problem/4-E.cpp
        big-stone/week4/problem/4-F.cpp
        big-stone/week4/problem/4-G.cpp
        big-stone/week4/problem/4-H.cpp
        big-stone/week4/problem/4-I.cpp
        big-stone/week4/problem/4-J.cpp
        big-stone/week4/problem/4-K.cpp
        big-stone/week4/problem/4-L.cpp
        big-stone/week4/problem/4-M.cpp
        big-stone/week4/problem/4-N.cpp
        big-stone/week5/problem/5-A.cpp
        big-stone/week5/problem/5-B.cpp
        big-stone/week5/problem/5-C.cpp
        big-stone/week5/problem/5-D.cpp
        big-stone/week5/problem/5-E.cpp
        big-stone/week5/problem/5-F.cpp
        big-stone/week5/problem/5-G.cpp
        big-stone/week5/problem/5-H.cpp
        big-stone/week5/problem/5-I.cpp
        big-stone/week5/problem/5-J.cpp
        big-stone/week5/problem/5-K.cpp
        big-stone/week5/problem/5-L.cpp
        big-stone/week5/problem/5-M.cpp
        big-stone/week5/problem/5-N.cpp
        big-stone/week5/problem/5-O.cpp
        big-stone/week5/problem/5-P.cpp
        big-stone/week5/problem/5-Q.cpp
        big-stone/week5/problem/5-R.cpp
        big-stone/week5/problem/5-S.cpp
        big-stone/week5/problem/5-T.cpp
        big-stone/week5/problem/5-U.cpp
        big-stone/week5/problem/5-V.cpp
        big-stone/week5/problem/5-W.cpp
        big-stone/week5/problem/5-X.cpp
        big-stone/week5/problem/5-Y.cpp
        big-stone/week5/problem/5-Z.cpp
        big-stone/week6/notion/a_binary_search.cpp
        big-stone/week6/notion/b_LIS.cpp
        big-stone/week6/6-A.cpp
        big-stone/week6/6-B.cpp
        big-stone/week6/6-C.cpp
        big-stone/week6/6-D.cpp
        big-stone/week6/6-E.cpp
        big-stone/week6/6-F.cpp
        big-stone/week6/6-G.cpp
        big-stone/week6/6-H.cpp
        big-stone/week6/6-I.cpp
        big-stone/week6/6-J.cpp
        big-stone/week6/6-K.cpp
        big-stone/week6/6-L.cpp
        big-stone/week6/6-M.cpp
        big-stone/week6/6-N.cpp
        big-stone/check.cpp
        big-stone/main.cpp
        big-stone/week1/notion_implementation.cpp
        big-stone/week2/notion/graph_adj_matrix.cpp
        big-stone/week2/notion/graph_adj_list.cpp
        big-stone/week2/notion/graph_map_traverse_four_direction.cpp
        big-stone/week2/notion/graph_dfs.cpp
        big-stone/week2/notion/graph_bfs.cpp
        big-stone/week2/notion/graph_tree_traverse.cpp
        big-stone/week3/principle/brute_force_loop.cpp
        big-stone/week7/notion/dp_notion_basic.cpp
        big-stone/week7/notion/dp_notion_count.cpp
        big-stone/week7/notion/dp_bottom_up_top_down.cpp
        big-stone/week7/7-P.cpp
        big-stone/week7/7-Q.cpp
        big-stone/week7/7-R.cpp
        big-stone/week7/7-S.cpp
        big-stone/week7/7-T.cpp
        big-stone/week7/7-U.cpp
        big-stone/week7/7-V.cpp
        big-stone/week7/7-W.cpp
        big-stone/week7/7-X.cpp
        big-stone/week7/7-Y.cpp
        big-stone/week8/8-A.cpp
        big-stone/week8/8-B.cpp
        big-stone/week8/8-C.cpp)
