cmake_minimum_required(VERSION 3.30)
project(big_stone)

set(CMAKE_CXX_STANDARD 20)

add_executable(big_stone main.cpp
        week1/notion_prefix1.cpp
        week1/problem/1-A.cpp
        week0/notion/recurrance.cpp
        week0/notion/permutation_combination.cpp
        week1/problem/1-B.cpp
        week1/problem/1-C.cpp
        week1/problem/1-D.cpp
        week1/problem/1-E.cpp
        week1/problem/1-F.cpp
        week1/problem/1-G.cpp
        week1/problem/1-H.cpp
        week1/problem/1-I.cpp
        week1/problem/1-J.cpp
)
