cmake_minimum_required(VERSION 3.30)
project(big_stone)

set(CMAKE_CXX_STANDARD 20)

add_executable(big_stone main.cpp
        week1/notion_prefix1.cpp
        week1/problem/1-A.cpp
        week0/notion/recurrance.cpp
        week0/notion/permutation_combination.cpp
        week1/problem/1-B.cpp
        week1/problem/1-C.cpp
        week1/problem/1-D.cpp
        week1/problem/1-E.cpp
        week1/problem/1-F.cpp
        week1/problem/1-G.cpp
        week1/problem/1-H.cpp
        week1/problem/1-I.cpp
        week1/problem/1-J.cpp
        week3/problem/3-N.cpp
        week3/problem/3-O.cpp
        week3/problem/3-P.cpp
        week3/problem/3-Q.cpp
        week4/notion/bin_operations.cpp
        week4/problem/4-A.cpp
        week4/problem/4-B.cpp
        week4/problem/4-C.cpp
        week4/problem/4-D.cpp
        week4/problem/4-E.cpp
        week4/problem/4-F.cpp
        week4/problem/4-G.cpp
        week4/problem/4-H.cpp
        week4/problem/4-I.cpp
        week4/problem/4-J.cpp
        week4/problem/4-K.cpp
        week4/problem/4-L.cpp
        week4/problem/4-M.cpp
        check.cpp
        week4/problem/4-N.cpp
        week5/problem/5-A.cpp
        week5/problem/5-B.cpp
        week5/problem/5-C.cpp
        week5/problem/5-D.cpp
)
