cmake_minimum_required(VERSION 3.30)
project(big_stone)

set(CMAKE_CXX_STANDARD 20)

add_executable(big_stone main.cpp
        week1/notion_prefix1.cpp
        week1/problem/1-A.cpp
        week0/notion/recurrance.cpp
        week0/notion/permutation_combination.cpp
        week1/problem/1-B.cpp
        week1/problem/1-C.cpp
        week1/problem/1-D.cpp
        week1/problem/1-E.cpp
        week1/problem/1-F.cpp
        week1/problem/1-G.cpp
        week1/problem/1-H.cpp
        week1/problem/1-I.cpp
        week1/problem/1-J.cpp
        week3/problem/3-N.cpp
        week3/problem/3-O.cpp
        week3/problem/3-P.cpp
        week3/problem/3-Q.cpp
        week4/notion/bin_operations.cpp
        week4/problem/4-A.cpp
        week4/problem/4-B.cpp
        week4/problem/4-C.cpp
        week4/problem/4-D.cpp
        week4/problem/4-E.cpp
        week4/problem/4-F.cpp
        week4/problem/4-G.cpp
        week4/problem/4-H.cpp
        week4/problem/4-I.cpp
        week4/problem/4-J.cpp
        week4/problem/4-K.cpp
        week4/problem/4-L.cpp
        week4/problem/4-M.cpp
        check.cpp
        week4/problem/4-N.cpp
        week5/problem/5-A.cpp
        week5/problem/5-B.cpp
        week5/problem/5-C.cpp
        week5/problem/5-D.cpp
        week5/problem/5-E.cpp
        week5/problem/5-F.cpp
        week5/problem/5-G.cpp
        week5/problem/5-H.cpp
        week5/problem/5-I.cpp
        week5/problem/5-J.cpp
        week5/problem/5-K.cpp
        week5/problem/5-L.cpp
        week5/problem/5-M.cpp
        week5/problem/5-N.cpp
        week5/problem/5-O.cpp
        week5/problem/5-P.cpp
        week5/problem/5-Q.cpp
        week5/problem/5-R.cpp
        week5/problem/5-S.cpp
        week5/problem/5-W.cpp
        week5/problem/5-T.cpp
        week5/problem/5-U.cpp
        week5/problem/5-V.cpp
        week5/problem/5-X.cpp
        week5/problem/5-Y.cpp
        week5/problem/5-Z.cpp
        week6/notion/a_binary_search.cpp
        week6/notion/b_LIS.cpp
        week6/6-A.cpp
        week6/6-B.cpp
        week6/6-C.cpp
        week6/6-D.cpp
        week6/6-E.cpp
        week6/6-F.cpp
        week6/6-G.cpp
        week6/6-H.cpp
        week6/6-I.cpp
        week6/6-J.cpp
        week6/6-K.cpp
        week6/6-L.cpp
)
